[gd_scene load_steps=2 format=3 uid="uid://b1y3i0kleeem6"]

[ext_resource type="Script" uid="uid://ck0dhbpjlrny6" path="res://scripts/Hub.gd" id="1_8mbd6"]

[node name="Hub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8mbd6")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 580.0
offset_top = 74.0
offset_right = 914.0
offset_bottom = 134.0
text = "Main Hub"

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 425.0
offset_top = 180.0
offset_right = 791.0
offset_bottom = 251.0

[node name="BackBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 589.0
offset_right = 206.0
offset_bottom = 679.0
text = "Back to Title"

[node name="PhishingBtn" type="Button" parent="."]
layout_direction = 2
layout_mode = 0
offset_left = 544.0
offset_top = 317.0
offset_right = 683.0
offset_bottom = 453.0
text = "Phishing
Game"

[node name="PasswordBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 181.0
offset_top = 319.0
offset_right = 324.0
offset_bottom = 456.0
text = "Password
Game"

[node name="RansomBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 898.0
offset_top = 323.0
offset_right = 1061.0
offset_bottom = 456.0
text = "Ransom
Game"
